resources/css/style.css
/* universal styles */

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  font-family: "Helvetica", sans-serif;
  font-size: 22px;
  color: seashell;
  background-color: black;
  opacity: 0.9;
  text-align: center;
  margin: 0;
}

a {
  color: white;
  text-decoration: underline;
}

img {
  object-fit: cover;
}

h2, h4 {
  padding: 10px 10px;
}

nav span {
  padding: 20px 10px;
}

/* header styles */

header {
  width: 100%;
  height: 69px;
  border-bottom: 1px solid white;
  display: inline-block;
  display: flex;
  align-items: center;
  position: fixed;
  z-index: 1;
  background: black;
}

.header_logo {
  width: auto;
  height: 50px;
  margin-left: 10px;


}

.header_nav {
  margin-right: 20px;
  flex-grow: 1;
  display: flex;
  justify-content: flex-end;
}

/* our mission */

.mission_container {
  width: 1200px;
  height: 700px;
  position: relative;
  top:69px;
  margin: 0 auto;
  background-image: url("https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-mission-background.jpg");
}

.mission_text {
  position: absolute;
  background: black;
  width: 100%;
  top: 300px;
}

/* totm */

.totm_container {
  width: 1000px;
  height: auto;
  position: relative;
  top:140px;
  margin: 0 auto;
}

/* .totm_text {
position: absolute;
background: black;
width: 100%;
top: 90%;
}

.totm_images_container {
position: flex;
align-items: center;
background: red;
}

.totm_images_container img {
width: 200px;
height: 300px;

} */

.flexContainer {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-wrap: wrap;
}

.col {
  width: 300px;
  height: 200px;
  margin: 40px 15px;
}

.col img{
  width: 100%;
  height: 100%;
  object-fit: cover;
}

/* locations styles  */

.locations_container {
  width: 1200px;
  height: 500px;
  position: relative;
  top:220px;
  margin: 0 auto;
  background-image: url("https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-locations-background.jpg");
  display: flex;
  flex-direction: column;
  align-items: center;
}

.locations_container h2{
  margin: 0px;
  padding: 0px;
  height: 30px;
}

.location_location {
  border: 1px solid red;
  justify-content: center;
  align-items: center;
}

.locations_flexContainer {
  display: flex;
  align-items: center;
  justify-content: center;
  border: 1px solid red;
}

.locations_col {
  width: 300px;
  height: 300px;
  margin: 15px 15px;
  padding: 15px 15px;
  line-height: 70px;
  /* width: 100%;
  height: 100%; */
  border: 1px solid red;

  background-color: black;
}

footer {
    top: 220px;
    position: relative;
}

footer h2, h5{
    padding: 20px 20px;
}

.footer_text {
  height: 200px;
}

.footer_container {
  display: flex;
  flex-direction: row;
  align-items: flex-start;
}



.footer_tandcs {
  flex-grow: 1;

}

/* break */

/* .locations_container {
width: 1200px;
height: 700px;
position: relative;
top:300px;
margin: 0 auto;
border: 1px solid red;
background-image: url("https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-locations-background.jpg");
}

.locations_text h2 {
margin-top: 60px;
}

.locations_flex_container {
border: 1px solid red;
z-index: 100;
} */

/* break */

/* .locations_flexContainer {
display: flex;
align-items: center;
justify-content: center;
flex-wrap: wrap;
}

.locations_text {
position: absolute;
width: 100%;
top: 10%;
}

.locations_col {
top:300px;
z-index: 1;

}

